--- a/QuizMasterV2/app/src/main/res/layout/fragment_first.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_first.xml
@@ -2,7 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/ic_launcher_background"
     tools:context=".FirstFragment">
@@ -15,7 +15,7 @@
 
         <Button
             android:id="@+id/Count_bt"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginTop="16dp"
@@ -28,7 +28,7 @@
 
         <Button
             android:id="@+id/Toast_bt"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="216dp"
             android:layout_marginTop="16dp"
@@ -120,8 +120,8 @@
                 android:layout_marginEnd="213dp"
                 android:button="@android:drawable/btn_star_big_off"
                 android:buttonTint="#4CAF50"
-                android:text="Normal"
                 android:checked="true"
+                android:text="Normal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/opcion3RadioButton" />
