--- a/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
+++ b/QuizMasterV2/app/src/main/res/layout/fragment_second.xml
@@ -2,7 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SecondFragment">
 
@@ -32,8 +32,8 @@
 
         <TextView
             android:id="@+id/puntaje"
-            android:layout_width="103dp"
-            android:layout_height="27dp"
+            android:layout_width="94dp"
+            android:layout_height="26dp"
             android:layout_marginStart="24dp"
             android:layout_marginBottom="40dp"
             android:text="@string/here_is_the_name_s"
@@ -153,11 +153,13 @@
             android:id="@+id/opcionSelecionadaText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="-30dp"
             android:layout_marginEnd="-30dp"
             android:layout_marginBottom="40dp"
             android:text="TextView"
             android:textColor="#0150FF"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/PreguntaText"
             app:layout_constraintEnd_toStartOf="@+id/puntajeTextView"
             app:layout_constraintStart_toEndOf="@+id/puntaje"
